[gd_scene load_steps=2 format=3 uid="uid://d865s6ervy3v"]

[ext_resource type="Script" uid="uid://v1egfujiwbt" path="res://Script/finalscore.gd" id="1_4nh4k"]

[node name="Root" type="CanvasLayer"]
script = ExtResource("1_4nh4k")

[node name="Label" type="Label" parent="."]
offset_left = 409.0
offset_top = 285.0
offset_right = 695.0
offset_bottom = 354.0
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
vertical_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="."]
offset_left = 269.0
offset_top = 386.0
offset_right = 309.0
offset_bottom = 455.0
theme_override_font_sizes/font_size = 50

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 505.0
offset_top = 107.0
offset_right = 644.0
offset_bottom = 173.0
mouse_force_pass_scroll_events = false
metadata/_edit_group_ = true

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RIPROVA"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "TORNA AL MENÃ™"

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
